notUsed/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f docker-compose.yml
    kompose.version: 1.8.0 (0c0c027)
  creationTimestamp: null
  labels:
    io.kompose.service: beta-web
  name: beta-web
spec:
  externalIPs:
  - 192.168.0.11
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  - name: "7081"
    port: 7081
    targetPort: 7081
  - name: "7082"
    port: 7082
    targetPort: 7082
  - name: "7083"
    port: 7083
    targetPort: 7083
  - name: "443"
    port: 443
    targetPort: 443
  selector:
    io.kompose.service: beta-web
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f docker-compose.yml
    kompose.version: 1.8.0 (0c0c027)
  creationTimestamp: null
  labels:
    io.kompose.service: beta-web
  name: beta-web
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: beta-web
    spec:
      containers:
      - image: 'nginx:1.13'
        name: beta-web
        ports:
        - containerPort: 80
        - containerPort: 7081
        - containerPort: 7082
        - containerPort: 7083
        - containerPort: 443
        resources: {}
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: api-config
          mountPath: /etc/nginx/conf.d
      restartPolicy: Always
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config 
        - name: api-config
          configMap:
            name: api-config
status: {}
